<resources>
    <string name="app_name">BuildMyResume</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="save">Save</string>
    <string name="get_starts">Get Starts</string>
    <string name="personal_details">Personal Details</string>
    <string name="objective">Objective</string>
    <string name="work_experience">Work Experience</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>