<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FeatureDetailsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personal_details_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_600"
        android:padding="5dp"
        android:tag="personalDetailsTv"
        android:text="@string/personal_details"
        android:textColor="@color/red_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/objective_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_600"
        android:padding="5dp"
        android:tag="objectiveTv"
        android:text="@string/objective"
        android:textColor="@color/red_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_details_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/work_experience_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_600"
        android:padding="5dp"
        android:tag="workExperienceTv"
        android:text="@string/work_experience"
        android:textColor="@color/red_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/objective_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>